Fixed the double scroll on the preview panel by hiding the overflow on the panel body. Fixed the omni present horizontal scroll on the snippets by removing an unnecessary scroll definition. Consolidated the ace styles.

--- a/main.css
+++ b/main.css
@@ -644,11 +644,9 @@ body > input[type="radio"] {
 				#steps article pre {
 					border-radius: 3px;
 					padding: 10px;
-					overflow-x: scroll;
 					-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.35);
 					background: rgba(0,0,0,.15);
-					font-family: "source-code-pro",Monaco, Consolas, "Courier New", monospace;
-					/*color: rgb(108,237,178);*/
+					font-family: "source-code-pro",Monaco,Consolas,"Courier New",monospace;
 					color: rgba(255,255,255,.5);
 					font-size: .77rem;
 				}
@@ -851,36 +849,6 @@ body > input[type="radio"] {
 			overflow: hidden;
 			}
 
-		.snippet {
-			position: relative;
-			/*top: 0;
-			left: 0;*/
-			width: 100%;
-			overflow: hidden;
-			}
-
-		.small{
-			height: 50px;
-		}
-		
-		.medium{
-			height: 150px;
-		}
-
-		.large{
-			height: 250px;
-		}
-			.ace_gutter {
-				border-radius: 5px 0 0 5px;
-			}
-
-			.ace_scroller {
-				border-radius: 0 5px 5px 0;
-			}
-
-		.justDoItContent{
-			visibility: hidden;
-		}	
 
 	/* View */
 	#view {
@@ -891,7 +859,10 @@ body > input[type="radio"] {
 		margin-top: 5px;
 	}
 	
-		#contacts {
+	#view .panel-body {
+		overflow: hidden;
+	}
+		#preview {
 			border-radius: 0 0 7px 7px;
 		}
 
@@ -904,13 +875,34 @@ body > input[type="radio"] {
 }
 
 .ace_gutter {
-	border-radius: 0;
+	border-radius: 5px 0 0 5px;
 }
 
 .ace_scroller {
-	border-radius: 0;
+	border-radius: 0 5px 5px 0;
 }
 
+.snippet {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	}
+
+.small{
+	height: 50px;
+}
+
+.medium{
+	height: 150px;
+}
+
+.large{
+	height: 250px;
+}
+
+.justDoItContent{
+	visibility: hidden;
+}
 
 /* ADMIN
 ---------------------------------------------------------------------*/
